# OpenCVUNet

./: .gitignore  CMakeLists.txt  README.md  build_host.sh  build_opencv_from_scratch.sh  download_video.sh  run.sh
include/opencv_unet/: UNet.hpp
src/: TimeMeasuring.hpp  TimeStamp.cpp  TimeStamp.hpp  UNet.cpp
test/: CMakeLists.txt  opencv_unet.cpp
